# cpp-webview-1

./: .clang-tidy  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  README.md
applications/01_hello_world/: .clang-tidy  CMakeLists.txt  README.md
applications/01_hello_world/src/: main.cpp
applications/02_counter/: .clang-format  CMakeLists.txt  README.md
applications/02_counter/.vim/: coc-settings.json
applications/02_counter/include/: counter_app.h
applications/02_counter/src/: counter_app.cpp  main.cpp
applications/02_counter/tests/: counter_test.cpp
applications/02_counter/web/: index.html
applications/03_text_echo/: CMakeLists.txt  README.md
applications/03_text_echo/include/: text_echo_app.h
applications/03_text_echo/src/: main.cpp  text_echo_app.cpp
applications/03_text_echo/tests/: text_echo_test.cpp
applications/03_text_echo/web/: index.html
applications/04_clock_app/: CMakeLists.txt  README.md
applications/04_clock_app/include/: clock_app.h
applications/04_clock_app/src/: clock_app.cpp  main.cpp
applications/04_clock_app/tests/: clock_test.cpp
applications/04_clock_app/web/: index.html
applications/05_notepad/: CMakeLists.txt  README.md
applications/06_file_picker/: CMakeLists.txt  README.md  test_directory.html
applications/06_file_picker/.vim/: coc-settings.json
applications/06_file_picker/include/: file_dialog_interface.h  file_picker_app.h  native_file_dialog.h  request_parser.h
applications/06_file_picker/src/: file_picker_app.cpp  main.cpp  native_file_dialog.cpp  request_parser.cpp  test_main.cpp
applications/06_file_picker/tests/: TEST_IMPROVEMENTS.md  file_picker_app_test.cpp  file_picker_test.cpp  integration_test.cpp  mock_file_dialog.h  request_parser_test.cpp
applications/06_file_picker/web/: index.html
applications/07_notepad/: README.md
applications/07_notepad/include/: notepad_app.h
applications/07_notepad/src/: main.cpp  notepad_app.cpp
applications/07_notepad/tests/: notepad_test.cpp
applications/07_notepad/web/: index.html
include/: webview_app.h
src/: main.cpp  webview_app.cpp
study/1/: index.html
tests/: test_webview_app.cpp
web/: index.html
